@@ -1,3 +1,6 @@
+2004-08-24	blytkerchan
+	* jailust.news.sql: new file
+
 2004-05-28	blytkerchan
 	* site.sql [comments table]: add date field
 	add some contents
